--- a/src/modules/MUBoard/style/style.css
+++ b/src/modules/MUBoard/style/style.css
@@ -286,12 +286,40 @@ button.muboardInlineButton {
 
 .muboard-user-posting-header-title {
     float: left;
+    width: 45%;
 }
 
 .muboard-user-posting-header-action {
-    float: right;
+    float: left;
+    width: 35%;
 }
 
+.muboard-user-posting-header-infos {
+    float: right;
+    padding: 0;
+}
+
+#muboard-user-posting-header-infos-close {
+    border: 1px solid #333;
+    width: 30px;
+    padding: 5px;
+    margin: 0 0 0 10px;
+    border-radius: 5px;
+    background-image: linear-gradient(bottom, #4D3F3F 0%, #EBDDDA 63%, #A892A8 100%);
+    background-image: -o-linear-gradient(bottom, #4D3F3F 0%, #EBDDDA 63%, #A892A8 100%);
+    background-image: -moz-linear-gradient(bottom, #4D3F3F 0%, #EBDDDA 63%, #A892A8 100%);
+    background-image: -webkit-linear-gradient(bottom, #4D3F3F 0%, #EBDDDA 63%, #A892A8 100%);
+    background-image: -ms-linear-gradient(bottom, #4D3F3F 0%, #EBDDDA 63%, #A892A8 100%);
+
+    background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0, #4D3F3F),
+	color-stop(0.63, #EBDDDA),
+	color-stop(1, #A892A8)
+    );
+}
 
 .muboard-user-posting-user {
     float: left;
