--- a/src/modules/MUBoard/style/style.css
+++ b/src/modules/MUBoard/style/style.css
@@ -329,9 +329,18 @@ button.muboardInlineButton {
 }
 
 .muboard-user-posting-avatar {
-    padding: 10px;
+    padding: 2%;
     float: left;
-    width: 40%;
+    width: 30%;
+    font-size: 0.8em;
+    text-align: center;
+}
+
+.muboard-user-posting-datas {
+    padding: 2%;
+    float: right;
+    width: 55%;
+    font-size: 0.8em;
 }
 .muboard-user-posting-created {
     font-size: 0.9em;
