--- a/src/modules/MUBoard/style/style.css
+++ b/src/modules/MUBoard/style/style.css
@@ -161,7 +161,6 @@ button.muboardInlineButton {
 }
 
 .muboard-user-category-header-statistic {
-
     padding: 5px 10px;
     margin: 5px 0 0 10px;
     float: left;
@@ -252,6 +251,23 @@ border-bottom: 1px solid #ddd;
     margin: 10px 0 0 20px;
     float: left;
     border-radius: 5px 5px 0 0;
+    border-bottom: 1px solid #999;
+}
+
+.muboard-user-forum-header-statistic {
+    padding: 5px 10px;
+    margin: 5px 0 0 10px;
+    float: left;
+    border-radius: 5px;
+    border-bottom: 1px solid #999;
+}
+
+.muboard-user-forum-header-category {
+    padding: 5px 10px;
+    margin: 5px 0 0 10px;
+    float: left;
+    font-size: 1.2em;
+    border-radius: 5px;
     border-bottom: 1px solid #999;
 }
 
@@ -397,6 +413,7 @@ border-bottom: 1px solid #ddd;
     border: 3px solid #fff;
     border-radius: 5px;
 }
+
 
 
 
