--- a/src/modules/MUBoard/style/style.css
+++ b/src/modules/MUBoard/style/style.css
@@ -272,12 +272,16 @@ border-bottom: 1px solid #ddd;
 }
 
 .muboard-user-forum-header-title {
-    background: #ddd;
-    padding: 2px 10px;
-    margin: 10px 0 0 20px;
     float: left;
+    width: 30%;
+}
+
+.muboard-user-forum-header-title h2 {
+    background: #ddd !important ;
+    padding: 10px 5px !important;
+    margin: 10px 0 0 20px;
     border-radius: 5px 5px 0 0;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #999; 
 }
 
 .muboard-user-forum-header-statistic {
