--- a/src/modules/MUBoard/style/style.css
+++ b/src/modules/MUBoard/style/style.css
@@ -470,13 +470,13 @@ border-bottom: 1px solid #ddd;
 
 .muboard-user-posting-user {
     float: left;
-    width: 25%;
+    width: 30%;
 }
 
 .muboard-user-posting-content {
     position: relative;
     float: right;
-    width: 74%;
+    width: 68%;
     border-left: 1px solid #ddd;
 }
 
@@ -500,6 +500,21 @@ border-bottom: 1px solid #ddd;
     float: left;
     width: 98%;
     padding: 10px 1%;
+}
+
+.muboard-user-posting-content-image a {
+    width: 90px;
+    height: 90px;
+    display: block;
+    float: left;
+    margin: 0 10px 10px 0;
+}
+
+.muboard-image-container {
+	width: 90px;
+	height: 90px;
+	float: left;
+	margin: 0 10px 10px 0;
 }
 
 .muboard-user-posting-avatar {
