--- a/style/style.css
+++ b/style/style.css
@@ -518,6 +518,7 @@ border-bottom: 1px solid #ddd;
 	height: 90px;
 	float: left;
 	margin: 0 10px 10px 0;
+	border: 2px solid #bbb;
 }
 
 .muboard-user-posting-content-file {
