--- a/style/style.css
+++ b/style/style.css
@@ -214,10 +214,12 @@ button.muboardInlineButton {
 .children {
     background: #369;
     color: #eee;
+    width: 5%;
 }
 
 .calls {
     background: #cc6;
+    width: 5%;
 }
 
 /* .muboard-user-category-header {
@@ -274,7 +276,7 @@ border-bottom: 1px solid #ddd;
 
 .muboard-user-forum-header-title {
     float: left;
-    width: 50%;
+    width: 30%;
 }
 
 .muboard-user-forum-header-title h2 {
@@ -288,8 +290,7 @@ border-bottom: 1px solid #ddd;
 .muboard-user-forum-header-statistic {
     padding: 5px 10px;
     margin: 5px 0 0 10px;
-    float: right;
-
+    float: left;
     border-radius: 5px;
     border-bottom: 1px solid #999;
 }
@@ -297,8 +298,7 @@ border-bottom: 1px solid #ddd;
 .muboard-user-forum-header-category {
     padding: 5px 10px;
     margin: 5px 0 0 10px;
-    float: right;
-    width: 35%;
+    float: left;
     font-size: 1.2em;
     border-radius: 5px;
     border-bottom: 1px solid #999;
@@ -424,13 +424,13 @@ border-bottom: 1px solid #ddd;
 }
 
 .muboard-user-posting-header-title {
-   /* float: left;
-    width: 45%;*/
+    float: left;
+    width: 45%;
 }
 
 .muboard-user-posting-header-action {
-    /*float: left;
-    width: 35%;*/
+    float: left;
+    width: 35%;
 }
 
 .muboard-user-posting-header-action-category {
@@ -470,11 +470,14 @@ border-bottom: 1px solid #ddd;
 }
 
 .muboard-user-posting-user {
-
+    float: left;
+    width: 30%;
 }
 
 .muboard-user-posting-content {
-
+    position: relative;
+    float: right;
+    width: 68%;
     border-left: 1px solid #ccc;
 }
 
@@ -526,12 +529,16 @@ border-bottom: 1px solid #ddd;
 
 .muboard-user-posting-avatar {
     padding: 2%;
+    float: left;
+    width: 30%;
     font-size: 0.8em;
     text-align: center;
 }
 
 .muboard-user-posting-datas {
     padding: 2%;
+    float: right;
+    width: 55%;
     font-size: 0.8em;
 }
 .muboard-user-posting-created {
