--- a/MU/BoardModule/Resources/views/Helper/includeStandardFieldsDisplay3.html.twig
+++ b/MU/BoardModule/Resources/views/Helper/includeStandardFieldsDisplay3.html.twig
@@ -3,7 +3,7 @@
     {% if obj.createdBy|default and obj.createdBy.getUid() > 0 %}
         {% set profileLink = obj.createdBy.getUid()|profileLinkByUserId() %}
         <span>
-            {{ __f('Created on %date', {'%date': obj.createdDate|localizeddate('medium', 'short')})|raw }}
+            {{ __f('Answered on %date', {'%date': obj.createdDate|localizeddate('medium', 'short')})|raw }}
         </span>
     {% endif %}
 {% endif %}
