--- a/MU/BoardModule/Resources/views/Posting/edit.html.twig
+++ b/MU/BoardModule/Resources/views/Posting/edit.html.twig
@@ -32,21 +32,29 @@
             </div>
             {% set images = getModVar('MUBoardModule', 'uploadImages') %}
             {% set numberImages = getModVar('MUBoardModule', 'numberImages') %}
+
             {% if images == 0 %}
                 <div class="hidden">
             {% endif %}
-            {% if numberImages == 1 or numberImages == 2 or numberImages == 3 %}
             {{ form_row(form.firstImage) }}
-            {% endif %}
-            {% if numberImages == 2 or numberImages == 3 %}
-            {{ form_row(form.secondImage) }}
-            {% endif %}
-            {% if numberImages == 3 %}
-            {{ form_row(form.thirdImage) }}
-            {% endif %}
-             {% if images == 0 %}
+            {% if images == 0 %}
                 </div>
             {% endif %}
+            {% if numberImages == 1 %}
+                <div class="hidden">
+            {% endif %}
+            {{ form_row(form.secondImage) }}
+            {% if numberImages == 1 %}
+                </div>            
+            {% endif %}
+            {% if images == 0 or (images == 1 and (numberImages == 1 or numberImages == 2)) %}
+                <div class="hidden">
+            {% endif %}
+            {{ form_row(form.thirdImage) }}
+            {% if images == 0 %}
+                </div>            
+            {% endif %}
+
             {% set files = getModVar('MUBoardModule', 'uploadFiles') %}
             {% set numberFiles = getModVar('MUBoardModule', 'numberFiles') %}
             {% if files == 0 %}
